Volunteers views done

--- a/app/assets/stylesheets/imports.sass
+++ b/app/assets/stylesheets/imports.sass
@@ -1,2 +1,12 @@
 .imports-panel
-  margin-top: 100px
+  margin-top: 15px
+
+#notice-explanation, #error-explanation, #exception-explanation
+  h3
+    margin-top: 5px
+.file-selection
+  margin-left: 15px
+  margin-top: 30px
+  margin-bottom: 25px
+.import
+  margin-top: 35px
