--- a/app/views/business/donators/_show.html.erb
+++ b/app/views/business/donators/_show.html.erb
@@ -13,48 +13,61 @@
                 </div>
                 <div class="row content">
                   <div class="col-md-12">
-                    <h3> Donator </h3>
-                    <p> <strong>First name:</strong> <%= @donator.first_name %> </p>
-                    <p> <strong>Last name:</strong> <%= @donator.last_name %> </p>
-                    <p> <strong>Email:</strong> <%= @donator.email %> </p>
-                    <p> <strong>Phone1:</strong> <%= @donator.phone1 %> </p>
-                    <p> <strong>Phone2:</strong> <%= @donator.phone2 %> </p>
-                    <p> <strong>Address:</strong> <%= @donator.location.full_street_address %> </p>
-                    <p> <strong>Coordinates:</strong> <%= @donator.location.latitude %> <%= @donator.location.longitude %> </p>
-
-                    <h3> Donator Donations </h3>
-                    <table  id="donations-modal-table" class="table table-striped table-responsive table-hover">
-                      <thead>
-                        <tr>
-                          <th>Transaction id </th>
-                          <th>Amount </th>
-                          <th>Date </th>
-                          <th>Actions </th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <% @donations.each do |business_donation| %>
-                          <tr>
-                            <td> <%= business_donation.transaction_id %> </td>
-                            <td> <%= business_donation.amount %> </td>
-                            <td> <%= business_donation.created_at %> </td>
-                            <td>
-                              <%= link_to 'edit', edit_business_donation_path(business_donation) %> |
-                              <%= link_to 'destroy', business_donation_path(business_donation), method: :delete, data: { confirm: 'are you sure?' } %>
-                            </td>
-                          </tr>
-                        <% end %>
-                      </tbody>
-                    </table>
-                    <p> 
-                    <%= link_to 'Back', business_donators_path, class: "closeDonatorShowModal" %>
-                    </p>
-                    <br />
+                    <div class="panel panel-default">
+                      <div class="panel-heading"><h4> Donator Details </h4></div>
+                      <div class="panel-body">
+                        <p> <strong>First name:</strong> <%= @donator.first_name %> </p>
+                        <p> <strong>Last name:</strong> <%= @donator.last_name %> </p>
+                        <p> <strong>Email:</strong> <%= @donator.email %> </p>
+                        <p> <strong>Phone1:</strong> <%= @donator.phone1 %> </p>
+                        <p> <strong>Phone2:</strong> <%= @donator.phone2 %> </p>
+                        <p> <strong>Address:</strong> <%= @donator.location.full_street_address %> </p>
+                        <p> <strong>Coordinates:</strong> <%= @donator.location.latitude %> <%= @donator.location.longitude %> </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-12">
+                    <div class="panel panel-default">
+                      <div class="panel-heading"><h4> Donation Details </h4></div>
+                      <div class="panel-body">
+                        <table  id="donations-modal-table" class="table table-striped table-responsive table-hover">
+                          <thead>
+                            <tr>
+                              <th>Transaction id </th>
+                              <th>Amount </th>
+                              <th>Date </th>
+                              <th>Actions </th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <% @donations.each do |business_donation| %>
+                              <tr>
+                                <td> <%= business_donation.transaction_id %> </td>
+                                <td> <%= business_donation.amount %> </td>
+                                <td> <%= business_donation.created_at %> </td>
+                                <td>
+                                  <div class="dropdown">
+                                    <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                      Actions <i class="fa fa-caret-down" aria-hidden="true"></i> 
+                                    </button>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                      <li> <%= link_to 'edit', edit_business_donation_path(business_donation) %> </li>
+                                      <li> <%= link_to 'destroy', business_donation_path(business_donation), method: :delete, data: { confirm: 'are you sure?' } %> </li>
+                                    </ul>
+                                  </div>
+                                </td>
+                              </tr>
+                            <% end %>
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-sm-12">
-                    <button type="button" class="closeDonatorShowModal btn btn-default">close</button>
+                    <button type="button" class="closeDonationShowModal btn btn-default">close</button>
+                    <%= link_to 'Back', business_donators_path, class: "closeDonationShowModal btn btn-default" %>
                   </div>
                 </div>
               </div>
@@ -64,5 +77,4 @@
       </div>
     </div>
   </div>
-
 </div>
