--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,5 +1,16 @@
-<h1>New Client</h1>
+<div class="tables-wrapper">
+  <div class="white-panel pn">
+    <div class="white-header">
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> New Clinet <h1>
+    </div>
+    <ul class="nav">
+      <li class="nav-item">
+        <%= link_to 'Back', clients_path %>
+      </li>
+    </ul>  
+    <%= render 'form' %>
+  </div>
+</div>
 
-<%= render 'form' %>
 
-<%= link_to 'Back', clients_path %>
+
