--- a/app/views/dogs_imports/new.html.erb
+++ b/app/views/dogs_imports/new.html.erb
@@ -1,10 +1,15 @@
-<h1>Dogs Import</h1>
+<div class="tables-wrapper">
+  <div class="white-panel pn">
+    <div class="white-header">
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> Dogs Import</h1>
+    </div>
+    <%= render "application_partials/import_info", klass: 'DogsImport' %>
+    <%= form_for @dogs_import do |f| %>
+      <%= render "application_partials/imports_flashes", import_objects: @dogs_import %>
+      <div class="field"> <%= f.file_field :file %> </div>
+      <div class="buttons"><%= f.submit "Import" %></div>
+    <% end %>
+  </div>
+</div>
 
-<%= render "application_partials/import_info", klass: 'DogsImport' %>
-
-<%= form_for @dogs_import do |f| %>
-  <%= render "application_partials/imports_flashes", import_objects: @dogs_import %>
-  <div class="field"> <%= f.file_field :file %> </div>
-  <div class="buttons"><%= f.submit "Import" %></div>
-<% end %>
 
