--- a/app/views/volunteers/_show.html.erb
+++ b/app/views/volunteers/_show.html.erb
@@ -10,72 +10,59 @@
                   <button type="button" class="closeVolunteer close">x</button>
                 </div>
               </div>
-              <br />
+              <p id="notice"><%= notice %></p>
               <div class="row">
-
                 <div class="col-md-12">
-                  <p id="notice"><%= notice %></p>
-
-                  <p>
-                  <strong>First name:</strong>
-                  <%= @volunteer.first_name %>
-                  </p>
-
-                  <p>
-                  <strong>Last name:</strong>
-                  <%= @volunteer.last_name %>
-                  </p>
-
-                  <p>
-                  <strong>Email:</strong>
-                  <%= @volunteer.email %>
-                  </p>
-
-                  <p>
-                  <strong>Phone1:</strong>
-                  <%= @volunteer.phone1 %>
-                  </p>
-
-                  <p>
-                  <strong>Phone2:</strong>
-                  <%= @volunteer.phone2 %>
-                  </p>
-
-                  <p>
-                  <strong>Address:</strong>
-                  <%= @volunteer.location.full_street_address %>
-                  </p>
-                  <strong>Coordinates:</strong>
-                  <%= @volunteer.location.latitude %>
-                  <%= @volunteer.location.longitude %>
-                  </p>
-
-                  <strong>Groups:</strong>
-                  <ul>
-                    <% @membership.each do |mb| %> 
-                      <li>
-                        <%= mb.name %> 
-                      </li>
-                    <% end %>
-                  </ul>
-
-                  <%= link_to 'Edit', edit_volunteer_path(@volunteer), class: "closeVolunteer" %> |
-                  <%= link_to 'Back', volunteers_path, class: "closeVolunteer"%>
+                  <div class="panel panel-default">
+                    <div class="panel-heading"><h4> Donator Details </h4></div>
+                    <div class="panel-body">
+                      <table class='table-hover'>
+                        <tr>
+                          <td><strong>First name</strong></td>
+                          <td> <%= @volunteer.first_name %> </td>
+                        </tr>
+                        <tr>
+                          <td><strong>Last name</strong></td>
+                          <td> <%= @volunteer.last_name %> </td>
+                        </tr>
+                        <tr>
+                          <td><strong>Email</strong></td>
+                          <td> <%= @volunteer.email %> </td>
+                        </tr>
+                        <tr>
+                          <td><strong>Phone 1</strong></td>
+                          <td> <%= @volunteer.phone1 %> </td>
+                        </tr>
+                        <tr>
+                          <td> <strong>Phone 2</strong></td>
+                          <td> <%= @volunteer.phone2 %> </td>
+                        </tr>
+                        <tr>
+                          <td> <strong>Address</strong></td>
+                          <td> <%= @volunteer.location.full_street_address %> </td>
+                        </tr>
+                        <tr>
+                          <td> <strong>Groups</strong></td>
+                          <td>
+                            <% @membership.each do |mb| %> 
+                              <%= mb.name %> 
+                            <% end %>
+                          </td>
+                        </tr>
+                      </table>
+                    </div>
+                  </div>
                 </div>
-
-
-              </div>
-              <div class="row">
                 <div class="col-sm-12">
                   <button type="button" class="closeVolunteer btn btn-default">close</button>
+                  <%= link_to 'Edit', edit_volunteer_path(@volunteer), class: "btn btn-default closeVolunteer" %>
+                  <%= link_to 'Back', volunteers_path, class: "closeVolunteer btn btn-default"%>
                 </div>
               </div>
             </div>
-            <br />
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
