--- a/app/views/volunteers/edit.html.erb
+++ b/app/views/volunteers/edit.html.erb
@@ -1,5 +1,16 @@
-<h1>Editing Volunteer</h1>
+<p id="notice"><%= notice %></p>
+<div class="tables-wrapper">
+  <div class="white-panel pn">
+    <div class="white-header">
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i>Edit Volunteer</h1>
+    </div>
+    <ul class="nav"> 
+      <li class="nav-item">
+        <%= link_to 'Back', volunteers_path, class: 'nav-link' %> 
+      </li>
+    </ul>
+    <%= render 'form' %>
+  </div>
+</div>
 
-<%= render 'form' %>
 
-<%= link_to 'Back', volunteers_path %>
