--- a/app/views/volunteers/index.html.erb
+++ b/app/views/volunteers/index.html.erb
@@ -16,27 +16,32 @@
       <li class="nav-item">
         <%= link_to 'Import data in CSV format', new_volunteers_import_path, class: "nav-link" %> 
       </li>
+      <li class="nav-item">
+        <%= link_to 'Home', root_path, class: "nav-link" %> 
+      </li>
     </ul>
 
     <table id="volunteers-table" class="table table-striped table-responsive table-hover">
       <thead>
         <tr>
-          <th>First name</th>
-          <th>Last name</th>
+          <th>Full name</th>
           <th>Email</th>
           <th>Phone1</th>
-          <th>Address</th>
+          <th>Groups</th>
           <th>Actions</th>
         </tr>
       </thead>
       <tbody>
         <% @volunteers.each do |volunteer| %>
           <tr>
-            <td><%= volunteer.first_name %></td>
-            <td><%= volunteer.last_name %></td>
+            <td><%= volunteer.fullname %></td>
             <td><%= volunteer.email %></td>
             <td><%= volunteer.phone1 %></td>
-            <td><%= volunteer.location.full_street_address if volunteer.location %></td>
+            <td>
+              <% volunteer.volunteers_groups.each do |group| %>
+                <%= group.name %> 
+              <% end %> 
+            </td>
             <td>
 
               <div class="dropdown">
