--- a/app/views/volunteers_groups/_form.html.erb
+++ b/app/views/volunteers_groups/_form.html.erb
@@ -7,6 +7,6 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, class: 'import' %>
   </div>
 <% end %>
