--- a/app/views/volunteers_groups/_show.html.erb
+++ b/app/views/volunteers_groups/_show.html.erb
@@ -12,41 +12,76 @@
               </div>
               <br />
               <div class="row">
-
+                <p id="notice"><%= notice %></p>
                 <div class="col-md-12">
-                  <p id="notice"><%= notice %></p>
-
-                  <p>
-                  <strong>Name:</strong>
-                  <%= @volunteers_group.name %>
-                  </p>
-
-                  <p>
-                  <strong>Description:</strong>
-                  <%= @volunteers_group.description %>
-                  </p>
-
-                  <p>
-                  <strong>Members:</strong>
-                  </p>
-                  <ul>
-                    <% @members.each do |member| %>
-                      <li> <%= member.fullname %> </li>
-                    <% end %> 
-                  </ul>
-
-                  <%= link_to 'Edit', edit_volunteers_group_path(@volunteers_group), class: 'closeVolunteer' %> |
-                  <%= link_to 'Back', volunteers_groups_path, class: 'closeVolunteer' %>
-
-
+                  <div class="panel panel-default">
+                    <div class="panel-heading"><h4>Group Details</h4></div>
+                    <div class="panel-body">
+                      <table class="table-hover">
+                        <tr>
+                          <td> <strong>Name</strong></td>
+                          <td> <%= @volunteers_group.name %> </td>
+                        </tr>
+                        <tr>
+                          <td> <strong>Description</strong></td>
+                          <td> <%= @volunteers_group.description %> </td>
+                        </tr>
+                      </table>
+                    </div>
+                  </div>
                 </div>
-                <div class="row">
-                  <div class="col-sm-12">
-                    <button type="button" class="closeVolunteer btn btn-default">close</button>
+                <div class="col-md-12">
+                  <div class="panel panel-default">
+                    <div class="panel-heading"><h4>Participants</h4></div>
+                    <div class="panel-body">
+                      <table id="volunteers-table" class="table table-striped table-responsive table-hover">
+                        <thead>
+                          <tr>
+                            <th>First name</th>
+                            <th>Last name</th>
+                            <th>Email</th>
+                            <th>Actions</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <% @members.each do |volunteer| %>
+                            <tr>
+                              <td><%= volunteer.first_name %></td>
+                              <td><%= volunteer.last_name %></td>
+                              <td><%= volunteer.email %></td>
+                              <td>
+                                <div class="dropdown">
+                                  <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Actions <i class="fa fa-caret-down" aria-hidden="true"></i> 
+                                  </button>
+                                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    <li>
+                                      <%= link_to 'Show', volunteer, remote: true, class: "dropdown-item" %>
+                                    </li>
+                                    <li>
+                                      <%= link_to 'Edit', edit_volunteer_path(volunteer), class: "dropdown-item" %>
+                                    </li>
+                                    <li>
+                                      <%= link_to 'Destroy', volunteer, method: :delete, data: { confirm: 'Are you sure?' }, class: "dropdown-item" %>
+                                    </li>
+                                  </ul>
+                                </div>
+                              </td>
+                            </tr>
+                          <% end %>
+                        </tbody>
+                      </table>    
+                    </div>
                   </div>
                 </div>
               </div>
-              <br />
+              <div class="row">
+                <div class="col-sm-12">
+                  <button type="button" class="closeVolunteer btn btn-default">close</button>
+                  <%= link_to 'Edit', edit_volunteers_group_path(@volunteers_group), class: 'btn btn-default closeVolunteer' %> 
+                  <%= link_to 'Back', volunteers_groups_path, class: 'btn btn-default closeVolunteer' %>
+                </div>
+              </div>
             </div>
           </div>
         </div>
