--- a/app/views/volunteers_groups/edit.html.erb
+++ b/app/views/volunteers_groups/edit.html.erb
@@ -1,6 +1,16 @@
-<h1>Editing Volunteers Group</h1>
+<p id="notice"><%= notice %></p>
+<div class="tables-wrapper">
+  <div class="white-panel pn">
+    <div class="white-header">
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i>Edit Volunteers Group</h1>
+    </div>
+    <ul class="nav"> 
+      <li class="nav-item">
+        <%= go_back %> 
+      </li>
+    </ul>
+    <%= render 'form' %>
+  </div>
+</div>
 
-<%= render 'form' %>
 
-<%= link_to 'Show', @volunteers_group %> |
-<%= link_to 'Back', volunteers_groups_path %>
