--- a/app/views/volunteers_groups/index.html.erb
+++ b/app/views/volunteers_groups/index.html.erb
@@ -7,7 +7,10 @@
     </div>
     <ul class="nav"> 
       <li class="nav-item">
-        <%= link_to 'New Volunteers group', new_volunteers_group_path, class: 'nav-link' %>
+        <%= link_to 'New Volunteers group', new_volunteers_group_path, class: 'nav-link back' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Home', root_path, class: 'nav-link' %> 
       </li>
     </ul>
 
@@ -31,7 +34,7 @@
                   Actions <i class="fa fa-caret-down" aria-hidden="true"></i> 
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <li> <%= link_to 'Show', volunteers_group %> </li>
+                  <li> <%= link_to 'Show', volunteers_group, remote: true %> </li>
                   <li> <%= link_to 'Edit', edit_volunteers_group_path(volunteers_group) %> </li>
                   <li> <%= link_to 'Destroy', volunteers_group, method: :delete, data: { confirm: 'Are you sure?' } %> </li>
                 </ul>
