--- a/app/views/volunteers_groups/new.html.erb
+++ b/app/views/volunteers_groups/new.html.erb
@@ -1,5 +1,17 @@
-<h1>New Volunteers Group</h1>
+<div class="tables-wrapper">
+  <div class="white-panel pn">
+    <div class="white-header">
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> New Volunteers Group</h1>
+    </div>
 
-<%= render 'form' %>
+    <ul class="nav">
+      <li class="nav-item">
+        <%= go_back %> 
+      </li>
+    </ul>
 
-<%= link_to 'Back', volunteers_groups_path %>
+    <%= render 'form' %>
+
+  </div>
+</div>
+
