--- a/app/assets/stylesheets/style-theme.sass
+++ b/app/assets/stylesheets/style-theme.sass
@@ -14,10 +14,12 @@ ul li
 a
   text-decoration: none
   outline: none
+  color: darken($turq, 25%)
 
   &:hover, &:focus
     text-decoration: none
     outline: none
+    color: lighten($turq, 10%)
 
 \::selection, ::-moz-selection
   background: $turq
