--- a/app/views/business/accounts/_new.html.erb
+++ b/app/views/business/accounts/_new.html.erb
@@ -10,14 +10,15 @@
                   <button type="button" class="closeAccountNewModal close">x</button>
                 </div>
               </div>
-              <br />
               <div class="row">
-
                 <div class="col-md-12">
-                  <h1>Add Account</h1>
-                  <%= render 'form' %>
+                  <div class="panel panel-default">
+                    <div class="panel-heading"> <h4>Add Account</h4> </div>
+                    <div class="panel-body">
+                      <%= render 'form' %>
+                    </div>
+                  </div>
                 </div>
-
               </div>
               <div class="row">
                 <div class="col-sm-12">
@@ -25,7 +26,6 @@
                 </div>
               </div>
             </div>
-            <br />
           </div>
         </div>
       </div>
