--- a/app/views/business/donations/_form.html.erb
+++ b/app/views/business/donations/_form.html.erb
@@ -19,6 +19,6 @@
   <% end %> 
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, class: "import" %>
   </div>
 <% end %>
