--- a/app/views/business/donations/index.html.erb
+++ b/app/views/business/donations/index.html.erb
@@ -45,10 +45,10 @@
                     <%= link_to 'Show', business_donation_path(business_donation), remote: true %> 
                   </li>
                   <li>
-                    <%= link_to 'edit', edit_business_donation_path(business_donation) %> 
+                    <%= link_to 'Edit', edit_business_donation_path(business_donation) %> 
                   </li>
                   <li>
-                    <%= link_to 'destroy', business_donation_path(business_donation), method: :delete, data: { confirm: 'are you sure?' } %>
+                    <%= link_to 'Destroy', business_donation_path(business_donation), method: :delete, data: { confirm: 'are you sure?' } %>
                   </li>
                 </ul>
               </div>
