--- a/app/views/business/donations/new.html.erb
+++ b/app/views/business/donations/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Business Donation</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', business_donations_path %>
+<div class="tables-wrapper">
+  <div class="white-panel pn">
+    <div class="white-header">
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> New Donation</h1>
+    </div>
+    <%= render 'panel_navigation' %>
+    <%= render 'form' %>
+  </div>
+</div>
