--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,6 +9,6 @@
   <%= render "application_partials/location_form", f: f  %>
 
   <div class="form-group">
-    <%= f.submit class: 'btn btn-default' %> 
+    <%= f.submit class: 'btn btn-default import' %> 
   </div>
 <% end %> 
