--- a/app/views/volunteers/edit.html.erb
+++ b/app/views/volunteers/edit.html.erb
@@ -4,11 +4,7 @@
     <div class="white-header">
       <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i>Edit Volunteer</h1>
     </div>
-    <ul class="nav"> 
-      <li class="nav-item">
-        <%= link_to 'Back', volunteers_path, class: 'nav-link' %> 
-      </li>
-    </ul>
+    <%= render 'panel_navigation' %>  
     <%= render 'form' %>
   </div>
 </div>
