--- a/app/views/volunteers_groups/new.html.erb
+++ b/app/views/volunteers_groups/new.html.erb
@@ -3,15 +3,8 @@
     <div class="white-header">
       <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> New Volunteers Group</h1>
     </div>
-
-    <ul class="nav">
-      <li class="nav-item">
-        <%= go_back %> 
-      </li>
-    </ul>
-
+    <%= render 'panel_navigation' %> 
     <%= render 'form' %>
-
   </div>
 </div>
 
