--- a/app/views/volunteers_imports/new.html.erb
+++ b/app/views/volunteers_imports/new.html.erb
@@ -20,7 +20,7 @@
                   <%= f.file_field :file, class: "file-selection" %> 
                 </div>
               </div>
-              <%= f.submit "Import Volunteers", class: 'btn btn-default import' %>
+              <%= f.submit "Upload File", class: 'btn btn-default import' %>
             <% end %>
           </div>
         </div>
