--- a/app/assets/stylesheets/clients.sass
+++ b/app/assets/stylesheets/clients.sass
@@ -5,8 +5,15 @@
       border: none
       margin-bottom: 0
       border-radius: 0
-      box-shadow: 0
+      box-shadow: none
     .panel-heading
       padding: 0
     .panel-title
       font-size: 13px
+    
+table.owner-modal-dog-table
+  margin-left: 10px 
+  margin-bottom: 20px
+  .td-side
+    border-left: 1px solid $gray-mid
+
