--- a/app/views/business/accounts/_edit.html.erb
+++ b/app/views/business/accounts/_edit.html.erb
@@ -12,14 +12,16 @@
               </div>
               <br />
               <div class="row">
-
                 <div class="col-md-12">
-
-                  <h1>Editing Account: <%= @account.name_was %></h1>
-
-                  <%= render 'form' %>
+                  <div class="panel panel-default">
+                    <div class="panel-heading">
+                      <h3 class="panel-title">Editing Account: <%= @account.name_was %> </h3>
+                    </div>
+                    <div class="panel-body">
+                      <%= render 'form' %>
+                    </div>
+                  </div>
                 </div>
-
               </div>
               <div class="row">
                 <div class="col-sm-12">
@@ -27,7 +29,6 @@
                 </div>
               </div>
             </div>
-            <br />
           </div>
         </div>
       </div>
