--- a/app/views/business/accounts/edit.html.erb
+++ b/app/views/business/accounts/edit.html.erb
@@ -1,8 +1,10 @@
-<div class="row">
-
-  <div class="col-md-6">
-    <h1>Editing Account: <%= @account.name_was %></h1>
-
+<div class="tables-wrapper">
+  <div class="white-panel pn">
+    <div class="white-header">
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> Editing Account: <%= @account.name_was %> </h1>
+    </div>
+    <%= render 'panel_navigation' %> 
     <%= render 'form' %>
   </div>
 </div>
+
