--- a/app/views/business/accounts/show.html.erb
+++ b/app/views/business/accounts/show.html.erb
@@ -6,12 +6,6 @@
       <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> <%= @account.type %> Account: <%= @account.name %></h1>
     </div>
 
-    <ol class="breadcrumb">
-      <li><%= link_to "Accounts", business_accounts_path %></li>
-      <li><%= link_to @account.type.pluralize, business_account_path(@account.type.pluralize.parameterize) %></a></li>
-      <li class="active"><%= @account.name %></li>
-    </ol>
-
     <ul class="nav">
       <li class="nav-item">
         <%= link_to 'New Account', new_business_account_path, class: "nav-link" %>
@@ -24,74 +18,89 @@
       </li>
     </ul>
 
-    <h3>Summary</h3>
-    <table id="account-table" class="table-striped table-responsive table-hover">
-      <thead>
-        <tr>
-          <th>Code</th>
-          <th>Name</th>
-          <th>Type</th>
-          <th>Transactions</th>
-          <th>Last Transaction</th>
-          <th>Balance</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
+    <ol class="breadcrumb">
+      <li><%= link_to "Accounts", business_accounts_path %></li>
+      <li><%= link_to @account.type.pluralize, business_account_path(@account.type.pluralize.parameterize) %></a></li>
+      <li class="active"><%= @account.name %></li>
+    </ol>
 
-      <tbody>
-        <tr>
-          <td><%= @account.code %></td>
-          <td><%= @account.name %></td>
-          <td><%= @account.type %></td>
-          <td><%= @account.transactions %></td>
-          <td><%= @account.last_transaction_date %></td>
-          <td><%= @account.balance %></td>
-          <td>
-            <div class="dropdown">
-              <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Actions <i class="fa fa-caret-down" aria-hidden="true"></i> 
-              </button>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <li>
-                  <%= link_to 'Delete', business_account_path(@account), method: :delete, data: { confirm: 'Are you sure?' }, class: 'dropdown-item' if @account.deletable? %>
-                </li>
-                <li>
-                  <%= link_to 'Edit', edit_business_account_path(@account), class: 'dropdown-item' %>
-                </li>
-              </ul>
-            </div>
-
-          </td>
-        </tr>
-      </tbody>
-    </table>
-
-    <h3>Transactions</h3>
-    <% if @account.amounts.empty? %>
-      There are no transactions in this account.
-    <% else %>
-      <table id="transactions-table" class="table table-striped table-responsive table-hover">
-        <thead>
-          <tr>
-            <th>Date</th>
-            <th>Description</th>
-            <th class='text-right'>Debit</th>
-            <th class='text-right'>Credit</th>
-            <th class='text-right'>Balance</th>
-          </tr>
-        </thead>
-        <tbody> 
-          <% @account.amounts.each do |amount| %>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Summary</h3>
+      </div>
+      <div class="panel-body">
+        <table id="account-table" class="table-striped table-responsive table-hover">
+          <thead>
             <tr>
-              <td><%= amount.entry.date %></td>
-              <td><%= amount.entry.description %></td>
-              <td class='text-right'><%= amount.amount if amount.debit_amount? %></td>
-              <td class='text-right'><%= amount.amount if amount.credit_amount? %></td>
-              <td class='text-right'><%= number_to_accounting amount.entry.balance %></td>
+              <th>Code</th>
+              <th>Name</th>
+              <th>Type</th>
+              <th>Transactions</th>
+              <th>Last Transaction</th>
+              <th>Balance</th>
+              <th>Actions</th>
             </tr>
-          <% end %>
-        </tbody>
-      </table>
-    <% end %> 
+          </thead>
+          <tbody>
+            <tr>
+              <td><%= @account.code %></td>
+              <td><%= @account.name %></td>
+              <td><%= @account.type %></td>
+              <td><%= @account.transactions %></td>
+              <td><%= @account.last_transaction_date %></td>
+              <td><%= @account.balance %></td>
+              <td>
+                <div class="dropdown">
+                  <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Actions <i class="fa fa-caret-down" aria-hidden="true"></i> 
+                  </button>
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <li>
+                      <%= link_to 'Delete', business_account_path(@account), method: :delete, data: { confirm: 'Are you sure?' }, class: 'dropdown-item' if @account.deletable? %>
+                    </li>
+                    <li>
+                      <%= link_to 'Edit', edit_business_account_path(@account), class: 'dropdown-item' %>
+                    </li>
+                  </ul>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Transactions</h3>
+      </div>
+      <div class="panel-body">
+        <% if @account.amounts.empty? %>
+          There are no transactions in this account.
+        <% else %>
+          <table id="transactions-table" class="table table-striped table-responsive table-hover">
+            <thead>
+              <tr>
+                <th>Date</th>
+                <th>Description</th>
+                <th class='text-right'>Debit</th>
+                <th class='text-right'>Credit</th>
+                <th class='text-right'>Balance</th>
+              </tr>
+            </thead>
+            <tbody> 
+              <% @account.amounts.each do |amount| %>
+                <tr>
+                  <td><%= amount.entry.date %></td>
+                  <td><%= amount.entry.description %></td>
+                  <td class='text-right'><%= amount.amount if amount.debit_amount? %></td>
+                  <td class='text-right'><%= amount.amount if amount.credit_amount? %></td>
+                  <td class='text-right'><%= number_to_accounting amount.entry.balance %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        <% end %> 
+      </div>
+    </div>
   </div>
 </div>
