--- a/app/views/business/donators_imports/new.html.erb
+++ b/app/views/business/donators_imports/new.html.erb
@@ -1,10 +1,35 @@
-<h1>Donators Import</h1>
 
-<%= render "application_partials/import_info", klass: 'DonatorsImport' %>
-
-<%= form_for [:business, @donators_import] do |f| %>
-  <%= render "application_partials/imports_flashes", import_objects: @donators_import %>
-  <div class="field"> <%= f.file_field :file %> </div>
-  <div class="buttons"><%= f.submit "Import" %></div>
-<% end %>
+<div class="tables-wrapper">
+  <div class="imports-panel">
+    <div class="col-md-12">
+      <div class="white-panel pn">
+        <div class="white-header">
+          <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i>Donators Import<h1>
+        </div>
+        <ul class="nav">
+          <li class="nav-item">
+            <%= link_to "Home", root_path, class: 'nav-link' %> 
+          </li>
+          <li class="nav-item">
+            <%= link_to "Back", business_donators_path, class: 'nav-link' %> 
+          </li>
+        </ul>
+        <div class="row">
+          <div class="col-md-12">
+            <%= form_for [:business, @donators_import] do |f| %>
+              <%= render "application_partials/imports_flashes", import_objects: @donators_import %>
+              <div class="well">
+                <div class="row">
+                  <%= render "application_partials/import_info", klass: 'DonatorsImport' %>
+                  <%= f.file_field :file, class: "file-selection" %> 
+                </div>
+              </div>
+              <%= f.submit "Upload File", class: 'btn btn-default import' %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
