--- a/app/views/business/entries/index.html.erb
+++ b/app/views/business/entries/index.html.erb
@@ -11,6 +11,12 @@
       <li class="nav-item">
         <%= link_to 'New Entry', new_business_entry_path, class: "nav-link" %>
       </li>
+      <li class="nav-item">
+        <%= link_to 'Download PDF', new_business_entry_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Home', root_path, class: "nav-link" %>
+      </li>
     </ul>
 
 
