--- a/app/views/business/general_ledger/index.html.erb
+++ b/app/views/business/general_ledger/index.html.erb
@@ -7,10 +7,13 @@
     </div>
     <ul class="nav"> 
       <li class="nav-item">
+        <%= link_to 'New Entry', new_business_entry_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
         <%= link_to 'Download PDF', new_volunteers_group_path, class: 'nav-link' %>
       </li>
       <li class="nav-item">
-        <%= link_to 'New Entry', new_volunteers_group_path, class: 'nav-link' %>
+        <%= link_to 'Home', root_path, class: 'nav-link' %> 
       </li>
     </ul>
 
