--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -10,10 +10,12 @@
   <%= f.input :institution, as: :radio_buttons %> 
   <h3> <%= f.label "Location" %> </h3>
   <%= render "application_partials/location_form", f: f  %>
-  <h3> <%= f.label "Dog details" %> </h3>
-  <%= render "application_partials/dog_form", f: f  %>
+  <% if params[:action] != 'edit' %>
+    <h3> <%= f.label "Dog details" %> </h3>
+    <%= render "application_partials/dog_form", f: f  %>
+  <% end %> 
 
   <div class="form-group">
-    <%= f.submit class: 'btn btn-default' %> 
+    <%= f.submit "Submit Owner", class: 'btn btn-default import' %> 
   </div>
 <% end %> 
