--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -8,7 +8,7 @@
 
     <ul class="nav">
       <li class="nav-item">
-        <%= link_to 'New Client', new_client_path %>
+        <%= link_to 'New Owner', new_client_path %>
       </li>
       <li class="nav-item">
         <%= link_to 'Download data in CSV format', clients_path(format: "csv") %> 
@@ -16,28 +16,27 @@
       <li class="nav-item">
         <%= link_to 'Import data in CSV format', new_dogs_owners_import_path %> 
       </li>
+      <li class="nav-item">
+        <%= link_to 'Home', root_path %> 
+      </li>
     </ul>
     <table id="clients-table" class="table table-striped table-responsive table-hover">
       <thead>
         <tr>
-          <th>First name</th>
-          <th>Last name</th>
+          <th>Institution</th>
+          <th>Fullname </th>
           <th>Email</th>
           <th>Phone1</th>
-          <th>Phone2</th>
-          <th>Institution</th>
           <th>Actions</th>
         </tr>
       </thead>
       <tbody>
         <% @clients.each do |client| %>
           <tr>
-            <td><%= client.first_name %></td>
-            <td><%= client.last_name %></td>
+            <td><%= institution_check(client) %></td>
+            <td><%= client.fullname %></td>
             <td><%= client.email %></td>
             <td><%= client.phone1 %></td>
-            <td><%= client.phone2 %></td>
-            <td><%= client.institution %></td>
             <td>
               <div class="dropdown">
                 <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
