--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,13 +1,9 @@
 <div class="tables-wrapper">
   <div class="white-panel pn">
     <div class="white-header">
-      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> New Clinet <h1>
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> New Dog Owner<h1>
     </div>
-    <ul class="nav">
-      <li class="nav-item">
-        <%= link_to 'Back', clients_path %>
-      </li>
-    </ul>  
+    <%= render "panel_navigation" %>
     <%= render 'form' %>
   </div>
 </div>
