--- a/app/views/dogs_imports/new.html.erb
+++ b/app/views/dogs_imports/new.html.erb
@@ -1,15 +1,34 @@
 <div class="tables-wrapper">
-  <div class="white-panel pn">
-    <div class="white-header">
-      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> Dogs Import</h1>
+  <div class="imports-panel">
+    <div class="col-md-12">
+      <div class="white-panel pn">
+        <div class="white-header">
+          <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> Dogs Import <h1>
+        </div>
+        <ul class="nav">
+          <li class="nav-item">
+            <%= link_to "Home", root_path, class: 'nav-link' %> 
+          </li>
+          <li class="nav-item">
+            <%= link_to "Back", dogs_path, class: 'nav-link' %> 
+          </li>
+        </ul>
+        <div class="row">
+          <div class="col-md-12">
+            <%= form_for @dogs_import do |f| %>
+              <%= render "application_partials/imports_flashes", import_objects: @dogs_import %>
+              <div class="well">
+                <div class="row">
+                  <%= render "application_partials/import_info", klass: 'DogsImport' %>
+                  <%= f.file_field :file, class: "file-selection" %> 
+                </div>
+              </div>
+              <%= f.submit "Upload File", class: 'btn btn-default import' %>
+            <% end %>
+          </div>
+        </div>
+      </div>
     </div>
-    <%= render "application_partials/import_info", klass: 'DogsImport' %>
-    <%= form_for @dogs_import do |f| %>
-      <%= render "application_partials/imports_flashes", import_objects: @dogs_import %>
-      <div class="field"> <%= f.file_field :file %> </div>
-      <div class="buttons"><%= f.submit "Import" %></div>
-    <% end %>
   </div>
 </div>
-
 
