--- a/app/views/dogs_owners_imports/new.html.erb
+++ b/app/views/dogs_owners_imports/new.html.erb
@@ -1,10 +1,30 @@
-<h1>Dog Owners Import</h1>
-
-<%= render "application_partials/import_info", klass: 'DogsOwnersImport' %>
-
-<%= form_for @owners_import do |f| %>
-  <%= render "application_partials/imports_flashes", import_objects: @owners_import %>
-  <div class="field"> <%= f.file_field :file %> </div>
-  <div class="buttons"><%= f.submit "Import" %></div>
-<% end %>
-
+<div class="tables-wrapper">
+  <div class="imports-panel">
+    <div class="col-md-12">
+      <div class="white-panel pn">
+        <div class="white-header">
+          <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> Owners Import <h1>
+        </div>
+        <ul class="nav">
+          <li class="nav-item">
+            <%= link_to "Back", clients_path %> 
+          </li>
+        </ul>
+        <div class="row">
+          <div class="col-md-12">
+            <%= form_for @owners_import do |f| %>
+              <%= render "application_partials/imports_flashes", import_objects: @owners_import %>
+              <div class="well">
+                <div class="row">
+                  <%= render "application_partials/import_info", klass: 'DogsOwnersImport' %>
+                  <%= f.file_field :file, class: "file-selection" %> 
+                </div>
+              </div>
+              <%= f.submit "Upload File", class: 'btn btn-default import' %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
