--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,10 @@
-<h1>users#edit</h1>
-<%= render 'form' %> 
+<div class="tables-wrapper">
+  <div class="white-panel pn">
+    <div class="white-header">
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i>User Edit</h1>
+    </div>
+    <%= render 'panel_navigation' %> 
+    <%= render 'form' %>
+  </div>
+</div>
+
