--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,13 +2,9 @@
 <div class="tables-wrapper">
   <div class="white-panel pn">
     <div class="white-header">
-      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> Listing Business Donations</h1>
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> Listing Users</h1>
     </div>
-    <ul class="nav">
-      <li class="nav-item">
-        <%= if current_moderator.owner? then link_to 'New User', new_user_path end %> 
-        </li>
-    </ul>
+    <%= render "panel_navigation" %> 
     <table id="users-table" class="table table-striped table-responsive table-hover">
       <thead>
         <tr>
