--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,9 @@
-<h1>New User</h1>
-<h2>users#new</h2>
-<%= render 'form' %> 
-<%= link_to 'Back', users_path %> 
+<div class="tables-wrapper">
+  <div class="white-panel pn">
+    <div class="white-header">
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i>New User</h1>
+    </div>
+    <%= render 'panel_navigation' %> 
+    <%= render 'form' %>
+  </div>
+</div>
