--- a/app/views/volunteers_groups/edit.html.erb
+++ b/app/views/volunteers_groups/edit.html.erb
@@ -4,11 +4,7 @@
     <div class="white-header">
       <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i>Edit Volunteers Group</h1>
     </div>
-    <ul class="nav"> 
-      <li class="nav-item">
-        <%= go_back %> 
-      </li>
-    </ul>
+    <%= render 'panel_navigation' %>
     <%= render 'form' %>
   </div>
 </div>
