liveness widget added to dashboard - extraction need to be done

--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -1,7 +1,21 @@
+<p id="notice"><%= notice %></p>
 <div class="tables-wrapper">
   <div class="white-panel pn">
     <div class="white-header">
       <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> App Settings</h1>
     </div>
+
+
+
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Panel title</h3>
+  </div>
+  <div class="panel-body">
+    Panel content
+  </div>
+</div>
+
+
   </div>
 </div>
