Registration page and form with client validation done. Next customization of validation.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,46 +1,6 @@
 <div class="row mt">
   <div id="center-dashboard" class="col-lg-9">
-      <div class="row">
-        <div class="col-md-12"> 
-          <div class="row mtbox">
-            <div class="col-md-2 col-sm-2 box0">
-              <div class="box1">
-                <span class="icon-heart liveness-icon"></span>
-                <h3>933</h3>
-              </div>
-              <p>933 People liked your page the last 24hs. Whoohoo!</p>
-            </div>
-            <div class="col-md-2 col-sm-2 box0">
-              <div class="box1">
-                <span class="icon-like liveness-icon"></span>
-                <h3>+48</h3>
-              </div>
-              <p>48 New files were added in your cloud storage.</p>
-            </div>
-            <div class="col-md-2 col-sm-2 box0">
-              <div class="box1">
-                <span class="icon-globe liveness-icon"></span>
-                <h3>23</h3>
-              </div>
-              <p>You have 23 unread messages in your inbox.</p>
-            </div>
-            <div class="col-md-2 col-sm-2 box0">
-              <div class="box1">
-                <span class="icon-drawer liveness-icon"></span>
-                <h3>+10</h3>
-              </div>
-              <p>More than 10 news were added in your reader.</p>
-            </div>
-            <div class="col-md-2 col-sm-2 box0">
-              <div class="box1">
-                <span class="icon-energy liveness-icon"></span>
-                <h3>OK!</h3>
-              </div>
-              <p>Your server is working perfectly. Relax & enjoy.</p>
-            </div>
-          </div>
-        </div>
-      </div>
+    <%= render "liveness_widget" %>
     <%= render "application_partials/main_section_dashboard" %>
   </div>
   <div id="right-sidebar-dashboard" class="col-lg-3 ds pn" >
