--- a/app/assets/stylesheets/style-theme.sass
+++ b/app/assets/stylesheets/style-theme.sass
@@ -180,7 +180,7 @@ ul.top-menu > li > .logout
   +border-radius
   border: 1px solid #64c3c2 !important
   padding: 5px 15px
-  margin-right: 15px
+  margin-right: 25px
   background: $turq
   margin-top: 15px
   &:hover
@@ -378,15 +378,22 @@ a.logo
   span
     color: $turq
 
+.header_inbox_bar
+  a
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2)
+    &:hover
+      box-shadow: 0 3px 3px 0 rgba(0,0,0,0.14), 0 1px 7px 0 rgba(0,0,0,0.12), 0 3px 1px -1px rgba(0,0,0,0.2)
+
 /*notification
 
 #top_menu .nav > li, ul.top-menu > li
   float: left
+  margin-right: 10px
 
 .notify-row
   float: left
   margin-top: 15px
-  margin-left: 92px
+  margin-left: 95px
 
   .notification span.label
     display: inline-block
@@ -630,12 +637,13 @@ ul.top-menu > li > a
 .sidebar-toggle-box
   float: left
   padding-right: 15px
-  margin-top: 20px
+  margin-top: 17px
+  margin-left: 25px
 
   .fa-bars
     cursor: pointer
     display: inline-block
-    font-size: 20px
+    font-size: 23px
 
 .sidebar-closed
   > #sidebar > ul
