--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -5,17 +5,19 @@
       <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> App Settings</h1>
     </div>
 
+    <%= simple_form_for @settings, html: {class: 'form-horizontal'} do |f| %> 
+      <%= f.input :dashboard, as: :boolean  %> 
+      <%= f.input :message, as: :boolean %> 
+      <%= f.input :task, as: :boolean %> 
+      <%= f.input :volunteer, as: :boolean %> 
+      <%= f.input :dog, as: :boolean %> 
+      <%= f.input :business, as: :boolean %> 
+      <%= f.input :statistic, as: :boolean %> 
+      <%= f.input :event, as: :boolean %> 
+      <%= f.input :setting, as: :boolean %> 
+      <%= f.button :submit, class: 'import' %> 
+    <% end %> 
 
-
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">Panel title</h3>
-  </div>
-  <div class="panel-body">
-    Panel content
   </div>
 </div>
 
-
-  </div>
-</div>
