frontform done next welcome mail need to be done

--- a/app/views/application_partials/_asside.html.erb
+++ b/app/views/application_partials/_asside.html.erb
@@ -1,13 +1,13 @@
 <aside>
   <div id="sidebar"  class="nav-collapse ">
     <!-- sidebar menu start-->
-    <%= link_to image_tag('logo-asside2', class: 'logo-asside'), root_path, id: 'logo-link'%> 
+    <%= link_to image_tag('logo-asside2', class: 'logo-asside'), dashboard_path, id: 'logo-link'%> 
     <br>
     <ul class="sidebar-menu" id="nav-accordion">
       <div id="side_accordion" class="sidebar-menu sub-menu">
         <div class="panel">
           <div class="panel-heading">
-            <%= link_to "<i class='fa fa-desktop'></i> Dashbard".html_safe, root_path %> 
+            <%= link_to "<i class='fa fa-desktop'></i> Dashbard".html_safe, dashboard_path %> 
           </div>
         </div>
         <div class="panel">
