--- a/app/views/application_partials/_main_section_dashboard.html.erb
+++ b/app/views/application_partials/_main_section_dashboard.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-12">
     <div class="tables-wrapper">
       <div class="white-panel pn">
         <div class="white-header">
@@ -17,7 +17,10 @@
       </div>
     </div>
   </div>
-  <div class="col-md-6">
+</div>
+<br>
+<div class="row">
+  <div class="col-md-12">
     <div class="tables-wrapper">
       <div class="white-panel pn">
         <div class="white-header">
@@ -28,4 +31,3 @@
     </div>
   </div>
 </div>
-<br>
