--- a/app/views/application_partials/_menu_bar.html.erb
+++ b/app/views/application_partials/_menu_bar.html.erb
@@ -2,136 +2,144 @@
   <ul class="nav top-menu">
     <!-- tasks start -->
     <li class="dropdown header_inbox_bar">
-      <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
-        <i class="fa fa-tasks"></i>
-        <span class="badge bg-theme">4</span>
-      </a>
-      <ul class="dropdown-menu extended tasks-bar">
-        <div class="notify-arrow notify-arrow-green"></div>
-        <li>
-          <p class="green">You have 4 pending tasks</p>
-        </li>
-        <li>
-          <a href="index.html#">
-            <div class="task-info">
-              <div class="desc">DashGum Admin Panel</div>
-              <div class="percent">40%</div>
-            </div>
-            <div class="progress progress-striped">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                <span class="sr-only">40% Complete (success)</span>
+
+      <% if menu_switch("task") %>
+
+        <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
+          <i class="fa fa-tasks"></i>
+          <span class="badge bg-theme">4</span>
+        </a>
+        <ul class="dropdown-menu extended tasks-bar">
+          <div class="notify-arrow notify-arrow-green"></div>
+          <li>
+            <p class="green">You have 4 pending tasks</p>
+          </li>
+          <li>
+            <a href="index.html#">
+              <div class="task-info">
+                <div class="desc">DashGum Admin Panel</div>
+                <div class="percent">40%</div>
               </div>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="index.html#">
-            <div class="task-info">
-              <div class="desc">Database Update</div>
-              <div class="percent">60%</div>
-            </div>
-            <div class="progress progress-striped">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                <span class="sr-only">60% Complete (warning)</span>
+              <div class="progress progress-striped">
+                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                  <span class="sr-only">40% Complete (success)</span>
+                </div>
               </div>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="index.html#">
-            <div class="task-info">
-              <div class="desc">Product Development</div>
-              <div class="percent">80%</div>
-            </div>
-            <div class="progress progress-striped">
-              <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                <span class="sr-only">80% Complete</span>
+            </a>
+          </li>
+          <li>
+            <a href="index.html#">
+              <div class="task-info">
+                <div class="desc">Database Update</div>
+                <div class="percent">60%</div>
               </div>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="index.html#">
-            <div class="task-info">
-              <div class="desc">Payments Sent</div>
-              <div class="percent">70%</div>
-            </div>
-            <div class="progress progress-striped">
-              <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-                <span class="sr-only">70% Complete (Important)</span>
+              <div class="progress progress-striped">
+                <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                  <span class="sr-only">60% Complete (warning)</span>
+                </div>
               </div>
-            </div>
-          </a>
-        </li>
-        <li class="external">
-          <a href="#">See All Tasks</a>
-        </li>
-      </ul>
+            </a>
+
+          </li>
+          <li>
+            <a href="index.html#">
+              <div class="task-info">
+                <div class="desc">Product Development</div>
+                <div class="percent">80%</div>
+              </div>
+              <div class="progress progress-striped">
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                  <span class="sr-only">80% Complete</span>
+                </div>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="index.html#">
+              <div class="task-info">
+                <div class="desc">Payments Sent</div>
+                <div class="percent">70%</div>
+              </div>
+              <div class="progress progress-striped">
+                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+                  <span class="sr-only">70% Complete (Important)</span>
+                </div>
+              </div>
+            </a>
+          </li>
+          <li class="external">
+            <a href="#">See All Tasks</a>
+          </li>
+        </ul>
+      <% end %> 
     </li>
     <!-- tasks end -->
     <!-- inbox dropdown start-->
     <li class="dropdown header_inbox_bar">
-      <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
-        <i class="fa fa-envelope-o"></i>
-        <span class="badge bg-theme">5</span>
-      </a>
-      <ul class="dropdown-menu extended inbox">
-        <div class="notify-arrow notify-arrow-green"></div>
-        <li>
-          <p class="green">You have 5 new messages</p>
-        </li>
-        <li>
-          <a href="index.html#">
-            <%# <span class="photo"><img alt="avatar" src="assets/img/ui-zac.jpg"></span> %>
-            <span class="subject">
-              <span class="from">Zac Snider</span>
-              <span class="time">Just now</span>
-            </span>
-            <span class="message">
-              Hi mate, how is everything?
-            </span>
-          </a>
-        </li>
-        <li>
-          <a href="index.html#">
-            <%# <span class="photo"><img alt="avatar" src="assets/img/ui-divya.jpg"></span> %>
-            <span class="subject">
-              <span class="from">Divya Manian</span>
-              <span class="time">40 mins.</span>
-            </span>
-            <span class="message">
-              Hi, I need your help with this.
-            </span>
-          </a>
-        </li>
-        <li>
-          <a href="index.html#">
-            <%# <span class="photo"><img alt="avatar" src="assets/img/ui-danro.jpg"></span> %>
-            <span class="subject">
-              <span class="from">Dan Rogers</span>
-              <span class="time">2 hrs.</span>
-            </span>
-            <span class="message">
-              Love your new Dashboard.
-            </span>
-          </a>
-        </li>
-        <li>
-          <a href="index.html#">
-            <%# <span class="photo"><img alt="avatar" src="assets/img/ui-sherman.jpg"></span> %>
-            <span class="subject">
-              <span class="from">Dj Sherman</span>
-              <span class="time">4 hrs.</span>
-            </span>
-            <span class="message">
-              Please, answer asap.
-            </span>
-          </a>
-        </li>
-        <li>
-          <a href="index.html#">See all messages</a>
-        </li>
-      </ul>
+      <% if menu_switch("message") %>
+
+        <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
+          <i class="fa fa-envelope-o"></i>
+          <span class="badge bg-theme">5</span>
+        </a>
+        <ul class="dropdown-menu extended inbox">
+          <div class="notify-arrow notify-arrow-green"></div>
+          <li>
+            <p class="green">You have 5 new messages</p>
+          </li>
+          <li>
+            <a href="index.html#">
+              <%# <span class="photo"><img alt="avatar" src="assets/img/ui-zac.jpg"></span> %>
+              <span class="subject">
+                <span class="from">Zac Snider</span>
+                <span class="time">Just now</span>
+              </span>
+              <span class="message">
+                Hi mate, how is everything?
+              </span>
+            </a>
+          </li>
+          <li>
+            <a href="index.html#">
+              <%# <span class="photo"><img alt="avatar" src="assets/img/ui-divya.jpg"></span> %>
+              <span class="subject">
+                <span class="from">Divya Manian</span>
+                <span class="time">40 mins.</span>
+              </span>
+              <span class="message">
+                Hi, I need your help with this.
+              </span>
+            </a>
+          </li>
+          <li>
+            <a href="index.html#">
+              <%# <span class="photo"><img alt="avatar" src="assets/img/ui-danro.jpg"></span> %>
+              <span class="subject">
+                <span class="from">Dan Rogers</span>
+                <span class="time">2 hrs.</span>
+              </span>
+              <span class="message">
+                Love your new Dashboard.
+              </span>
+            </a>
+          </li>
+          <li>
+            <a href="index.html#">
+              <%# <span class="photo"><img alt="avatar" src="assets/img/ui-sherman.jpg"></span> %>
+              <span class="subject">
+                <span class="from">Dj Sherman</span>
+                <span class="time">4 hrs.</span>
+              </span>
+              <span class="message">
+                Please, answer asap.
+              </span>
+            </a>
+          </li>
+          <li>
+            <a href="index.html#">See all messages</a>
+          </li>
+        </ul>
+      <% end %> 
     </li>
     <!-- inbox dropdown end -->
     <li class="dropdown header_inbox_bar">
@@ -141,22 +149,22 @@
       <%= link_to icon('users').html_safe, volunteers_path if menu_switch("volunteer") %> 
     </li>
     <li class="dropdown header_inbox_bar">
-      <%= link_to icon('paw').html_safe, dogs_path %> 
+      <%= link_to icon('paw').html_safe, dogs_path if menu_switch("dog") %> 
     </li>
     <li class="dropdown header_inbox_bar">
-      <%= link_to icon('handshake-o').html_safe, business_donations_path %> 
+      <%= link_to icon('handshake-o').html_safe, business_donations_path if menu_switch("business") %> 
     </li>
     <li class="dropdown header_inbox_bar">
-      <%= link_to icon('book').html_safe, business_accounts_path %> 
+      <%= link_to icon('book').html_safe, business_accounts_path if menu_switch("account") %> 
     </li>
     <li class="dropdown header_inbox_bar">
-      <%= link_to icon('line-chart').html_safe, accounts_stats_path %> 
+      <%= link_to icon('line-chart').html_safe, accounts_stats_path if menu_switch("statistic") %> 
     </li>
     <li class="dropdown header_inbox_bar">
-      <%= link_to icon('calendar').html_safe, events_path %> 
+      <%= link_to icon('calendar').html_safe, events_path if menu_switch("event") %> 
     </li>
     <li class="dropdown header_inbox_bar">
-      <%= link_to icon('gears').html_safe, settings_path %> 
+      <%= link_to icon('gears').html_safe, settings_path if menu_switch("setting") %> 
     </li>
   </ul>
 </div>
