--- a/app/views/business/donations/index.html.erb
+++ b/app/views/business/donations/index.html.erb
@@ -20,9 +20,10 @@
     <table id="donations-table" class="table table-striped table-responsive table-hover">
       <thead>
         <tr>
-          <th>Transaction id </th>
+          <th>ID</th>
           <th>Amount </th>
           <th>Donator </th>
+          <th>Transaction id </th>
           <th>Date </th>
           <th>Actions </th>
         </tr>
@@ -31,9 +32,10 @@
       <tbody>
         <% @business_donations.each do |business_donation| %>
           <tr>
-            <td> <%= business_donation.transaction_id %> </td>
+            <td> <%= business_donation.id_no %> </td>
             <td> <%= business_donation.amount %> </td>
             <td> <%= business_donation.donator.fullname %> </td>
+            <td> <%= business_donation.transaction_id %> </td>
             <td> <%= date(business_donation.created_at) %> </td>
             <td>
               <div class="dropdown">
