--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -24,17 +24,19 @@
     <table id="dogs-table" class="table table-striped table-responsive table-hover">
       <thead>
         <tr>
-          <th>Name:</th>
-          <th>Chip id:</th>
-          <th>Age:</th>
-          <th>Breed:</th>
-          <th>Sex:</th>
-          <th>Actions:</th>
+          <th>ID</th>
+          <th>Name</th>
+          <th>Chip id</th>
+          <th>Age</th>
+          <th>Breed</th>
+          <th>Sex</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody>
         <% @dogs.each do |dog| %>
           <tr>
+            <td> <%= dog.id_no %> </td>
             <td> <%= dog.name %> </td>
             <td> <%= dog.chip_id %> </td>
             <td> <%= dog.age %> </td>
