--- a/app/views/front/new.html.erb
+++ b/app/views/front/new.html.erb
@@ -1,11 +1,21 @@
 <%= form_for @volunteer, url: '/front', method: :post, html:{ class: 'form-login form-register'} do |f| %>
   <h2 class="form-login-heading">
-    <%= image_tag 'logo-asside', class: 'login-logo' %> 
+    <%= image_tag 'logo.png', class: 'login-logo' %> 
     Volunteer Registration Form 
   </h2>
 
 
   <div class="login-wrap">
+    <% if flash[:notice] %>
+      <div class="registration-notice">
+        <%= flash[:notice] %> 
+        <ul class="registration-errors">
+          <%  @volunteer.errors.full_messages.each do |msg| %>
+            <li>* <%= msg %> </li>
+          <% end %> 
+        </ul>
+      </div>
+    <% end %> 
     <h3>Personal Details</h3>
     <div class="form-group">
       <%= f.label :first_name %> 
@@ -52,13 +62,12 @@
       </div>
     <% end %> 
     <div class="form-group">
-      <%= f.submit class: 'btn btn-default import', required: true %> 
+      <%= f.submit 'Register', class: 'btn btn-default import', id: 'register', required: true %> 
     </div>
   </div>
 
 <% end %>
 
 <script>
-  console.log("in");
-  $(".form-register").validate();
+$(".form-register").validate();
 </script>
