--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -5,6 +5,18 @@
       <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> App Settings</h1>
     </div>
 
+
+  <!-- Nav tabs -->
+  <ul class="nav nav-tabs" role="tablist">
+    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Quick Menu</a></li>
+    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Mail Template</a></li>
+    <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Lorem</a></li>
+    <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Lorem</a></li>
+  </ul>
+
+  <!-- Tab panes -->
+  <div class="tab-content">
+    <div role="tabpanel" class="tab-pane active" id="home">
     <%= simple_form_for @settings, html: {class: 'form-horizontal'} do |f| %> 
       <%= f.input :dashboard, as: :boolean  %> 
       <%= f.input :message, as: :boolean %> 
@@ -17,6 +29,27 @@
       <%= f.input :setting, as: :boolean %> 
       <%= f.button :submit, class: 'import' %> 
     <% end %> 
+    
+    </div>
+    <div role="tabpanel" class="tab-pane" id="profile">
+    <%= simple_form_for @mail, html: {class: 'from-horizontal'} do |f| %>
+
+      <%= f.input :subject, input_html: { value: @mail.subject } %>
+      <%= f.input :body, input_html: { value: @mail.body } %>
+
+      <div class="form-group">
+        <%= f.submit class: 'btn btn-default import' %> 
+      </div>
+    <% end %> 
+    
+    </div>
+    <div role="tabpanel" class="tab-pane" id="messages">3..</div>
+    <div role="tabpanel" class="tab-pane" id="settings">4..</div>
+  </div>
+
+
+    
+
 
   </div>
 </div>
